# obs-studio

UI/: obs-app.cpp  window-basic-about.cpp  window-basic-main.cpp  window-basic-settings.cpp
UI/data/locale/: zh-CN.ini
UI/forms/: OBSAbout.ui  OBSBasic.ui  OBSBasicSettings.ui
UI/installer/: mp-installer.nsi
UI/xdg-data/: com.obsproject.Studio.desktop
cmake/: ALL_BUILD.vcxproj.user.in
cmake/Modules/: ObsCpack.cmake
plugins/: CMakeLists.txt
plugins/obs-timetext/: CMakeLists.txt  obs-timetext.vcxproj
plugins/obs-timetext/data/locale/: zh-CN.ini
plugins/obs-timetext/gdiplus/: obs-timetext.cpp
